@@ -1,5 +1,9 @@
 # -*- coding: utf-8 -*-
 
+2008-10-09  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems.rb:  Fix requires for inflate, deflate, etc.
+
 2008-10-03  Phil Hagelberg <technomancy@gmail.com>
 
 	* lib/rubygems.rb: Make Gem.dir respect :gemhome value from config.
